--- a/watchMovie-page.html
+++ b/watchMovie-page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Đây là trang xem phim!">
     <title>Watch Movies</title>
     <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/base.css">
