cập nhật ui, fix bug, cập nhật commentcomment, xóa chia sẻ

--- a/index.html
+++ b/index.html
@@ -18,15 +18,7 @@
     <div class="main-page">
         <header></header>
         <div class="content">
-            <div class="slider-container">
-                <button class="prev">
-                    <i class="fa-light fa-angle-left"></i>
-                </button>
-                <div class="slider-inner"></div>
-                <button class="next">
-                    <i class="fa-light fa-angle-right"></i>
-                </button>
-            </div> 
+            <div class="slider-container"></div> 
             <section class="feature-film"></section>
             <section class="television-seris"></section>
             <section class="cartoon"></section>
