--- a/watchMovie-page.html
+++ b/watchMovie-page.html
@@ -1,49 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Đây là trang xem phim!">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Đây là trang xem phim!" />
     <title>Watch Movies</title>
     <link rel="icon" href="./assets/img/logo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/watchMovie.css">
-    <link rel="stylesheet" href="./assets/css/footer.css">
-    <link rel="stylesheet" href="./assets/css/toastMessage.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
-    <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css">
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v19.0" nonce="TIeMOrHD"></script>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v19.0" nonce="aDeC8jMP"></script>
+    <link rel="stylesheet" href="./assets/css/base.css" />
+    <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/watchMovie.css" />
+    <link rel="stylesheet" href="./assets/css/footer.css" />
+    <link rel="stylesheet" href="./assets/css/toastMessage.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/icon/fontawesome.com/releases/v6.4.2/css/all.css" />
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v19.0&appId=1156430178708905" nonce="IaFtZmeL"></script>
     <div class="main-page">
         <header></header>
         <div class="content">
             <div class="detail-movie"></div>
-            <div 
-                class="fb-share-button" 
-                data-href="https://developers.facebook.com/docs/plugins/" 
-                data-layout="button" 
-                data-size="large">
-                <a 
-                    target="_blank" 
-                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" 
-                    class="fb-xfbml-parse-ignore">
-                    Chia sẻ
-                </a>
-            </div>
-            <div 
-                data-colorscheme="light"
-                data-width="100%"
-                data-numposts="5"
-                class="fb-comments"
-                data-href="https://developers.facebook.com/docs/plugins/comments#configurator">
+            <div style="background-color: #fff !important; padding: 4px; border-radius: 3px; margin: 16px 0 32px 0;">
+                <div data-colorscheme="light" data-width="100%" data-numposts="5" class="fb-comments"
+                    data-href="https://phohoccode.github.io/Watch-movies/"></div>
             </div>
         </div>
         <footer></footer>
     </div>
-    <div id="fb-root"></div>
     <script defer type="module" src="./src/view/watchMovie.js"></script>
 </body>
 </html>
